@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/stage1-chroot.sh,v 1.37 2005/11/30 21:34:03 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/stage1-chroot.sh,v 1.38 2005/12/07 21:33:43 wolf31o2 Exp $
 	
 
 . /tmp/chroot-functions.sh
@@ -19,6 +19,7 @@ export clst_buildpkgs="$(/tmp/build.py)"
 export STAGE1_USE="$(portageq envvar STAGE1_USE)"
 export USE="-* build ${STAGE1_USE}"
 export FEATURES="${clst_myfeatures} nodoc noman noinfo"
+export EMERGE_WARNING_DELAY=0
 
 ## Sanity check profile
 if [ -z "${clst_buildpkgs}" ]
