@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage2/stage2-chroot.sh,v 1.15 2005/08/09 19:02:31 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage2/stage2-chroot.sh,v 1.16 2005/12/07 21:33:43 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 
@@ -13,6 +13,7 @@ setup_myemergeopts
 
 ## setup the environment
 export FEATURES="${clst_myfeatures} nodoc noman noinfo"
+export EMERGE_WARNING_DELAY=0
 
 if [ "${clst_VERBOSE}" ]
 then
